{
    "name": "PlayerAction",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "d6db8fd0-4e83-42ad-ba9b-7cf00a099c4f",
            "actions": [
                {
                    "name": "Mouse",
                    "type": "Button",
                    "id": "5a86db31-4f62-4158-99b1-e14cfee9fa38",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "861617ca-207a-4f34-b415-904bf089514f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "85cdea30-624d-450a-803b-8484d21ffc88",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f602817-e9a3-4f9b-8562-b6870357af8b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}